--- a/learing-springboo3-book-examples/ch3/src/main/resources/templates/index.mustache
+++ b/learing-springboo3-book-examples/ch3/src/main/resources/templates/index.mustache
@@ -1,4 +1,4 @@
-<h1>Greetings Learning Spring Boot 3.0 fans!</h1>
+<h1>Video Service</h1>
 
 <p>
   In this chapter, we are learning how to make
@@ -30,3 +30,5 @@
     <button type="submit">Submit</button>
   </form>
 </ul>
+
+<button type="button" id="homeButton" onClick="window.location.href='/'">Home</button>
